internal/kgateway/extensions2/plugins/serviceentry/testdata/input/serviceentry-backendref.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
  namespace: infra
spec:
  gatewayClassName: example-gateway-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
  namespace: infra
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "se.example.com"
  rules:
  - backendRefs:
    - name: example-se
      port: 80
      kind: ServiceEntry
      group: networking.istio.io
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: example-se
  namespace: infra
spec:
  hosts:
  - se.example.com
  ports:
  - number: 80
    name: http
    protocol: TCP
  resolution: STATIC
  location: MESH_INTERNAL
  workloadSelector:
    labels:
      test: test
  endpoints: []
